Ajout de la référence à OpenWSN (pour le simulateur/émulateur OpenSim)

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -58,6 +58,21 @@
   NOTE =        {\texttt{http://www.riot-os.org/}}
 }
 
+@ARTICLE{OpenWSN,
+  AUTHOR =       {T. Watteyne and X. Vilajosana and B. Kerkez and F. Chraim
+                  and K. Weekly and Q. Wang and S. Glaser and K. Pister},
+  TITLE =       {{OpenWSN: a standards-based low-power wireless
+                  development environment}},
+  JOURNAL =      {Transactions on Emerging Telecommunications Technologies},
+  VOLUME =       {23},
+  NUMBER =       {5},
+  YEAR =         {2012},
+  PAGES =        {480--493},
+  ISSN =         {2161-3915},
+  DOI =          {10.1002/ett.2558},
+  PUBLISHER =    {John Wiley & Sons, Ltd}
+}
+
 %% Articles "victimes" du problème de Cooja/MSPSim
 
 @INPROCEEDINGS{Co-RPL-2014,
@@ -181,4 +196,5 @@
   YEAR =        {2014},
   ISSN =        {1570-8705},
 }
+
 
