Ajout des références à TOSSIM, TinyOS et Nano-RK

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -73,6 +73,46 @@
   PUBLISHER =    {John Wiley & Sons, Ltd}
 }
 
+@INPROCEEDINGS{TOSSIM,
+  AUTHOR =       {P. Levis and N. Lee and M. Welsh and D. Culler},
+  TITLE =       {{TOSSIM: Accurate and Scalable Simulation
+                  of Entire TinyOS Applications}},
+  BOOKTITLE =    {Proceedings of the 1st International Conference on
+                  Embedded Networked Sensor Systems},
+  SERIES =       {SenSys '03},
+  PAGES =        {126--137},
+  YEAR =         {2003},
+  PUBLISHER =    {ACM}
+}
+
+@INCOLLECTION{TinyOS,
+  AUTHOR =       {P. Levis and S. Madden and J. Polastre and R. Szewczyk
+                  and K. Whitehouse and A. Woo and D. Gay and J. Hill
+                  and M. Welsh and E. Brewer and D. Culler},
+  TITLE =       {{TinyOS: An Operating System for Sensor Networks}},
+  BOOKTITLE =    {Ambient Intelligence},
+  PAGES =        {115--148},
+  YEAR =         {2005},
+  PUBLISHER =    {Springer Berlin Heidelberg},
+  NOTE =         {\texttt{http://www.tinyos.net/}}
+}
+
+@INPROCEEDINGS{NanoRK,
+  AUTHOR =       {A. Eswaran and A. Rowe and R. Rajkumar},
+  TITLE =       {{Nano-RK: an energy-aware resource-centric RTOS
+                  for sensor networks}},
+  BOOKTITLE =    {Proceedings of the 26th IEEE International
+                  Real-Time Systems Symposium},
+  SERIES =       {RTSS '05},
+  PAGES =        {265},
+  YEAR =         {2005},
+  DOI =          {10.1109/RTSS.2005.30},
+  ISSN =         {1052-8725},
+  PUBLISHER =    {IEEE},
+  NOTE =         {\texttt{http://nanork.org/}}
+}
+
+
 %% Articles "victimes" du problème de Cooja/MSPSim
 
 @INPROCEEDINGS{Co-RPL-2014,
